<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/your_id_string"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="#e59400"
            android:textSize="20sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#e59400"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/main_textview"
            android:layout_width="wrap_content"
            android:layout_height="252dp"
            android:gravity="center"
            android:text="@string/help_string"
            android:textColor="#e59400"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/newCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/newcode_button"
        android:textColor="#e59400" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/newCode"
        android:gravity="center"
        android:text="@string/code"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#da1337"
        android:textSize="40sp" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/linearLayout2"
        android:background="#e59400"
        android:visibility="visible" />

</RelativeLayout>